--- a/src/todo-list/todo-item/todo-item.component.html
+++ b/src/todo-list/todo-item/todo-item.component.html
@@ -2,34 +2,38 @@
   <div
     class="card"
     [ngClass]="{
-      'main-div grey lighten-2': state,
-      'blue-grey darken-3  white-text': !state
+      'main-div grey lighten-2': todo.done,
+      'blue-grey darken-3  white-text': !todo.done
     }"
   >
     <div class="card-content">
       <span class="card-title">
+        <div class="" style="font-size: small; opacity: 0.5;">
+          {{ customDate.transform(todo.creationDate, true) }} - {{ todo.city }}
+        </div>
         <div *ngIf="editMode; else elseBlock">
           <div>
             <label name="label">
-              New task
+              Change label
               <input
                 type="text"
                 name="label"
-                [(ngModel)]="label"
+                [(ngModel)]="todo.label"
                 (keyup.enter)="updateLabel()"
               />
             </label>
           </div>
         </div>
-        <ng-template #elseBlock> {{ label }} </ng-template>
-        <div *ngIf="editMode == false">
+        <ng-template #elseBlock>
+          {{ todo.label }}
+
           <i class="material-icons right" (click)="changeEditMode()">edit</i>
-        </div>
+        </ng-template>
       </span>
     </div>
     <div class="card-action">
       <a href="#" (click)="changeItemState()">
-        {{ state ? 'done' : 'undone' }}</a
+        {{ todo.done ? 'done' : 'undone' }}</a
       >
     </div>
   </div>
