--- a/src/todo-list/todo-item/todo-item.component.html
+++ b/src/todo-list/todo-item/todo-item.component.html
@@ -9,7 +9,7 @@
     <div class="card-content">
       <span class="card-title">
         <div class="" style="font-size: small; opacity: 0.5;">
-          {{ customDate.transform(todo.creationDate, true) }} - {{ todo.city }}
+          {{ customDate.transform(todo.creationDate, true) }}
         </div>
         <div *ngIf="editMode; else elseBlock">
           <div>
@@ -25,9 +25,13 @@
           </div>
         </div>
         <ng-template #elseBlock>
-          {{ todo.label }}
-
-          <i class="material-icons right" (click)="changeEditMode()">edit</i>
+          <span style="font-size: 70%;"> {{ todo.label }} </span>
+          <i class="material-icons right" id="delete" (click)="delete()"
+            >delete</i
+          >
+          <i class="material-icons right" id="update" (click)="changeEditMode()"
+            >edit</i
+          >
         </ng-template>
       </span>
     </div>
