--- a/src/app/todo-list/todo-item/todo-item.component.html
+++ b/src/app/todo-list/todo-item/todo-item.component.html
@@ -9,7 +9,7 @@
     <div class="card-content">
       <span class="card-title">
         <div class="" style="font-size: small; opacity: 0.5;">
-          {{ customDate.transform(todo.creationDate, true) }}
+          {{ todo.creationDate | customDate: true }}
         </div>
         <div *ngIf="editMode; else elseBlock">
           <div>
@@ -42,3 +42,4 @@
     </div>
   </div>
 </div>
+<!--   -->
